# stack

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.gitea/workflows/: lint.yml  publish.yml  test-container-registry.yml  test-database.yml  test-deploy.yml  test-external-stack.yml  test-k8s-deploy.yml  test-k8s-deployment-control.yml  test-webapp.yml  test.yml
.github/workflows/: clean-releases.yml  lint.yml  publish.yml  test-backup.yml  test-ci.yml  test-database.yml  test-deploy-k8s.yml  test-deploy.yml  test-static-content.yml  test-webapp.yml  test.yml
docs/: CONTRIBUTING.md  README.md  adding-a-new-stack.md  backup-implementation.md  backup.md  cli.md  commands.md  fetching-containers.md  gitea-with-laconicd-fixturenet.md  hooks.md  ingress.md  install.md  laconicd-with-console.md  recent-features.md  release-process.md  spec.md  stack-files.md  subcommands.md  webapp.md  wrappers.md
docs/commands/: build.md  chart.md  check.md  complete.md  config.md  deploy.md  fetch.md  index.md  init.md  list.md  manage.md  prepare.md  update.md  version.md  webapp.md
scripts/: build_shiv_package.sh  create_build_tag_file.sh  developer-mode-setup.sh  lint.sh  publish_shiv_package_github.sh  quick-deploy-test.sh  quick-install-linux.sh  tag_new_release.sh
src/stack/: base.py  cli_util.py  command_types.py  constants.py  log.py  main.py  opts.py  update.py  util.py  version.py
src/stack/chart/: chart.py
src/stack/checklist/: checklist.py  list_stack.py
src/stack/complete/: complete.py
src/stack/config/: config.py  util.py
src/stack/data/: build_tag.txt  version.txt
src/stack/deploy/: deploy.py  deploy_types.py  deploy_util.py  deployer_factory.py  deployment.py  deployment_context.py  deployment_create.py  explain.py  images.py  spec.py  stack.py
src/stack/graph/: graph.py
src/stack/init/: init.py
stack/: base.py  cli_util.py  command_types.py  constants.py  main.py  opts.py  update.py  util.py  version.py
stack/data/: npm-package-list.txt
stack/deploy/: deploy.py  deploy_types.py  deploy_util.py  deployer.py  deployer_factory.py  deployment.py  deployment_context.py  deployment_create.py  images.py  spec.py  stack.py
stack/repos/: fetch_stack.py  setup_repositories.py
tests/backup/: run-test.sh
tests/database/: run-test.sh
tests/deploy/: run-deploy-test.sh
tests/external-stack/: run-test.sh
tests/k8s-deploy/: run-deploy-test.sh
tests/k8s-deployment-control/: run-test.sh
tests/scripts/: install-kind.sh
tests/smoke-test/: run-smoke-test.sh
tests/static-content-test/: run-static-content-test.sh
tests/webapp-test/: run-webapp-test.sh
(+68 files in other folders)
