[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stack"
version = "2.0.1"
authors = [{name="David Boreham", email="david@bozemanpass.com" }, {name="Thomas E Lackey", email="telackey@bozemanpass.com"}]
description = ""
readme = "README.md"
dependencies = [
    "click",
    "python-dotenv",
    "GitPython",
    "tqdm",
    "python-on-whales == 0.63.0",
    "PyYAML",
    "ruamel.yaml.string",
    "tomli",
    "validators",
    "kubernetes",
    "humanfriendly",
    "requests",
    "expandvars",
    "mergedeep",
    "flake8",
    "black"
]
requires-python = ">=3.10"

[project.scripts]
stack = "stack:main.cli"

[tool.setuptools.package-data]
stack = ['data/**']

[project.urls]
"Homepage" = "https://github.com/bozemanpass/stack"
"Bug Tracker" = "https://github.com/bozemanpass/stack/issues"
