[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[project]
name = "stack"
version = "2.0.1"
authors = [{name="David Boreham", email="david@bozemanpass.com" }, {name="Thomas E Lackey", email="telackey@bozemanpass.com"}]
description = ""
readme = "README.md"
dependencies = [
    "click",
    "python-dotenv",
    "GitPython",
    "tqdm",
    "python-on-whales == 0.63.0",
    "PyYAML",
    "ruamel.yaml.string",
    "tomli",
    "validators",
    "kubernetes",
    "humanfriendly",
    "requests",
    "expandvars",
    "mergedeep",
    "mermaid-builder",
    "termcolor",
]
requires-python = ">=3.10"

[project.scripts]
stack = "stack:main.cli"

[dependency-groups]
dev = ["flake8", "black"]

[project.urls]
"Homepage" = "https://github.com/bozemanpass/stack"
"Bug Tracker" = "https://github.com/bozemanpass/stack/issues"
